--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://club-pard.github.io/pard-website",
   "name": "pard-website",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.11.6",
+    "gh-pages": "^5.0.0",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-carousel": "^4.3.0",
@@ -23,7 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
