--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.11.6",
     "gsap": "^3.11.5",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-carousel": "^4.3.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
